simple get implemented

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>git Pages Template</title>
+    <title>Shopify Internship Challenge</title>
     <link rel="stylesheet" href="reset.css">
   </head>
   <body>
